# demo-auto-aws-iotfleetwise

./: .gitignore  CONTRIBUTING.md  NOTICE  README-temp.md  README.md  app.py  requirements.txt
biga_image/: .eslintignore  .eslintrc.js  .gitignore  README.md  cdk.json  package.json  tsconfig.json
biga_image/repo_seed/: build.buildspec.yml
biga_image/test/: poky-pipeline.test.ts
data/: hscan.dbc
grafana_dashboards/: grafana.py
greengrass_components/: fwe_ggv2_stack.py
greengrass_components/repo-fwe-ggv2-seed/: .gitignore  .gitmodules  README.md
greengrass_components/repo-fwe-ggv2-seed/tools/: install-deps-cross.sh
iot_data_ingestion_pipeline/: ruleConfig.json  visibility_stack.py
iot_fleetwise_setup/: main_stack.py
src/: agl_stack.py  fwe-ggv2-ci.py  fwe_ggv2_stack.py  grafana.py  main_stack.py  vehicle_ec2_sim.py
src/fleetwise-edge-agent-ggv2-component/: CMakeLists.txt  buildspec.yml
src/fleetwise-edge-agent-ggv2-component/src/offboardconnectivity/implementation/awsiotcpp/include/: AwsIotChannel.h  AwsIotConnectivityModule.h
src/fleetwise-edge-agent-ggv2-component/src/offboardconnectivity/implementation/awsiotcpp/src/: AwsIotChannel.cpp  AwsIotConnectivityModule.cpp
src/fleetwise-edge-agent-ggv2-component/tools/ggv2-component/: recipe-template.yml
src/fleetwise-edge-agent-ggv2-component/tools/recipes/: com.amazon.aws.FleetWise-1.0.0.json
src/grafana-image/: .aa  Dockerfile
src/repo-agl-seed/: README.md  buildspec.yml  config  gg-env-setup.sh
src/repo-fwe-ggv2-seed/: buildspec.yml
src/repo-fwe-ggv2-seed/tools/: install-deps-native.sh
(+11 files in other folders)
